--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,17 @@
-@media screen and ( max-width: 1200px)
+@media screen and ( max-width: 1300px )
+   .contacts
+      &__phone
+         margin-right: 1rem
+@media screen and ( max-width: 1200px )
    html
       font-size: 12px
    .nav
       &__item
          margin-right: 1rem
-@media screen and ( max-width: 992px)
+   .contacts
+      &__phone
+         margin-right: 1rem
+@media screen and ( max-width: 992px )
    .nav
       display: none
    .hero
@@ -12,7 +19,7 @@
          display: none
       &__content
          margin-left: 0
-@media screen and ( max-width: 905px)
+@media screen and ( max-width: 905px )
    .row
       flex-direction: column
       align-items: center
@@ -32,12 +39,12 @@
             font-size: 1rem
             text-align: center
             margin: 1rem 14rem   
-@media screen and ( max-width: 830px)
+@media screen and ( max-width: 830px )
    .section
       &-title
          &__text
             margin: 1rem 12rem           
-@media screen and ( max-width: 570px)
+@media screen and ( max-width: 570px )
    .contacts
       &__phone
          margin-right: 0
@@ -57,18 +64,30 @@
          margin-bottom: 2.28rem
       &__button
          display: block
-         max-width: 22.8rem
+         min-width: 22.8rem
          margin-bottom: 1.85rem
+         text-align: center  
    .section
       &-title
          &__text
             font-size: 1rem
             text-align: center
             margin: 1rem 4rem
-@media screen and ( max-width: 520px)
+@media screen and ( max-width: 520px )
    .hero
       &__scroll-down
          display: none
+@media screen and ( max-width: 320px )
+   .hero
+      &__button
+         min-width: auto
+         width: 100%
+      &__text
+         width: 100%
+      &__content
+
+         
+   
 
 
    
