--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -8,6 +8,14 @@
    background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
    height: 100vh
    color: $light
+   &::after
+      content: ''
+      width: 100%
+      height: 3.5rem
+      position: absolute
+      bottom: 0
+      left: 0
+      background-color: $dark
    &::before
       content: ''
       position: absolute
@@ -43,13 +51,14 @@
       align-items: center
       left: 0
       bottom: 0
-      min-width: 17.6rem
-      min-height: 6.92rem
+      min-width: 17rem
+      min-height: 7rem
       background-color: $dark
       text-transform: uppercase
       text-decoration: none
       color: $light
       font-family: 'Yeseva One', cursive
+      z-index: 9
       &::after
          content: ''
          background: url('../img/arrow-down.svg') no-repeat center
